--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Legacy Angular Modules</title>
@@ -9,7 +9,7 @@
     <nav class="abc-banner">
       <a href="https://angularbootcamp.com/"></a>
       <span>Legacy Angular Modules</span>
-      <a target="_blank" href="https://angular.io/guide/ngmodule">
+      <a target="_blank" href="https://angular.dev/guide/ngmodules">
         NgModules
       </a>
     </nav>
