--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Legacy Angular Modules</title>
+    <title>Legacy Ng Modules</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <nav class="abc-banner">
       <a href="https://angularbootcamp.com/"></a>
-      <span>Legacy Angular Modules</span>
+      <span>Legacy Ng Modules</span>
       <a target="_blank" href="https://angular.dev/guide/ngmodules">
         NgModules
       </a>
